<package format="2">
  <name>smart_watch</name>
  <version>0.0.1</version>
  <description>The smart_watch package</description>

  <maintainer email="kiss.roland@hallgato.sze.hu">Kiss Roland</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    
  </export>
</package>